--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,32 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: rgb(67, 67, 168);
+}
+
+.container{
+    text-align: center;
+    padding: 30px;
+    width: 60%;
+    margin: 100px auto;
+    background-color: rgb(38, 38, 102);
+    border-radius: 20px;
+}
+
+h1{
+    margin-bottom: 20px;
+}
+
+button{
+    padding: 10px 20px;
+    background-color: rgb(67, 67, 168);
+    border-radius: 20px;
+    border: none;
+    font-size: 15px;
+}
+
+h2{
+    margin-top: 20px;
+}
